--- a/readittome/Base.lproj/Main.storyboard
+++ b/readittome/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--oauthedController-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="readittome" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="oauthedController" title="oauthedController" id="BYZ-38-t0r" customClass="ViewController" customModule="readittome" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -24,10 +24,10 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--Pocket Auth View Controller-->
+        <!--pocketAuthModalController-->
         <scene sceneID="GSw-s8-PyD">
             <objects>
-                <viewController id="FEh-ao-ZQM" customClass="PocketAuthViewController" customModule="readittome" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="pocketAuthModalController" title="pocketAuthModalController" id="FEh-ao-ZQM" customClass="PocketAuthViewController" customModule="readittome" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Wjb-NJ-kQF"/>
                         <viewControllerLayoutGuide type="bottom" id="yi2-fQ-5jH"/>
