--- a/readittome/Base.lproj/Main.storyboard
+++ b/readittome/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--oauthedController-->
@@ -17,12 +18,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <connections>
-                        <segue destination="FEh-ao-ZQM" kind="presentation" identifier="PocketAuthModalSegue" id="iXt-CZ-SEj"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1322" y="1125"/>
         </scene>
         <!--pocketAuthModalController-->
         <scene sceneID="GSw-s8-PyD">
@@ -36,8 +35,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dND-en-HmM">
-                                <rect key="frame" x="258" y="65" width="84" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dND-en-HmM">
+                                <rect key="frame" x="258" y="48" width="84" height="30"/>
                                 <state key="normal" title="Auth Pocket">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -47,11 +46,25 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dND-en-HmM" firstAttribute="top" secondItem="Wjb-NJ-kQF" secondAttribute="bottom" constant="28" id="B2u-rK-4By"/>
+                            <constraint firstItem="dND-en-HmM" firstAttribute="leading" secondItem="KbN-mP-K8F" secondAttribute="leadingMargin" constant="242" id="TCF-iy-JOV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dND-en-HmM" secondAttribute="trailing" constant="242" id="Yny-jm-QCv"/>
+                            <constraint firstItem="dND-en-HmM" firstAttribute="top" secondItem="Wjb-NJ-kQF" secondAttribute="bottom" constant="28" id="hTm-e4-H6u"/>
+                            <constraint firstAttribute="centerX" secondItem="dND-en-HmM" secondAttribute="centerX" id="thG-LW-Fmc"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="TCF-iy-JOV"/>
+                                <exclude reference="Yny-jm-QCv"/>
+                                <exclude reference="hTm-e4-H6u"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Agi-Fg-4R4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1978" y="700"/>
+            <point key="canvasLocation" x="1322" y="445"/>
         </scene>
     </scenes>
 </document>
