Better all the things!

--- a/readittome/Base.lproj/Main.storyboard
+++ b/readittome/Base.lproj/Main.storyboard
@@ -5,24 +5,6 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--oauthedController-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController storyboardIdentifier="oauthedController" title="oauthedController" id="BYZ-38-t0r" customClass="ViewController" customModule="readittome" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1322" y="1125"/>
-        </scene>
         <!--pocketAuthModalController-->
         <scene sceneID="GSw-s8-PyD">
             <objects>
@@ -64,7 +46,69 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Agi-Fg-4R4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1322" y="445"/>
+            <point key="canvasLocation" x="2008" y="-118"/>
+        </scene>
+        <!--Articles View Controller-->
+        <scene sceneID="CZr-eH-RZU">
+            <objects>
+                <tableViewController storyboardIdentifier="ArticlesViewController" id="V33-ts-3gL" customClass="ArticlesViewController" customModule="readittome" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="bGr-M7-awl">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleCell" textLabel="w1c-6A-d2B" style="IBUITableViewCellStyleDefault" id="7Qr-Qd-iCw">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7Qr-Qd-iCw" id="PUd-ZC-KX0">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Test" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="w1c-6A-d2B">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="V33-ts-3gL" id="Lr8-Ea-Whz"/>
+                            <outlet property="delegate" destination="V33-ts-3gL" id="V0J-FC-rdU"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Srd-Xj-TPc">
+                        <barButtonItem key="rightBarButtonItem" title="Sign out" id="KGg-DO-KpK">
+                            <connections>
+                                <action selector="SignOutPocket:" destination="V33-ts-3gL" id="ztg-HH-xhU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="articlesTableView" destination="bGr-M7-awl" id="C68-GF-rGr"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7am-Py-SB2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2820" y="561"/>
+        </scene>
+        <!--Main Navigation View Controller-->
+        <scene sceneID="8Ex-35-fiU">
+            <objects>
+                <navigationController storyboardIdentifier="MainNavigationViewController" automaticallyAdjustsScrollViewInsets="NO" id="tfy-5P-udq" customClass="MainNavigationViewController" customModule="readittome" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dI0-mi-HEM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="V33-ts-3gL" kind="relationship" relationship="rootViewController" id="wZI-sQ-bcN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WRw-OJ-5hM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2008" y="561"/>
         </scene>
     </scenes>
 </document>
